--- a/src/client/styles/colors.less
+++ b/src/client/styles/colors.less
@@ -1,7 +1,7 @@
 @bgColorDark: #000000;
 @bgColorLight: #FCFFF4;
 @textColorDark: #FFF;
-@textColorLight: #FFF;
+@textColorLight: #000000;
 @purpleDark: #5A0FB9;
 @purpleLight: #E2CBFF;
 
