--- a/src/client/components/MainScreen/BackgroundScreen/YellowColumn/YellowColumn.less
+++ b/src/client/components/MainScreen/BackgroundScreen/YellowColumn/YellowColumn.less
@@ -1,6 +1,8 @@
 .boxContainer {
+  z-index: -1;
   position: absolute;
-  top: -140px;
+  top: 240px;
+  left: 20%;
   display: flex;
   flex-direction: column;
   animation-name: fallTetramino;
@@ -9,22 +11,22 @@
   animation-timing-function: linear;
 }
 
-.redBox {
+.yellowBox {
   width: 40px;
   height: 40px;
-  background-color: #C72907;
+  background-color: #E3DA07;
 }
 
-.darkRedBox {
+.darkYellowBox {
   width: 40px;
   height: 40px;
-  background-color: #9B2424;
+  background-color: #C7C015;
 }
 
-.redShadow {
-  width: 80px;
+.yellowShadow {
+  width: 40px;
   height: 60px;
-  background: linear-gradient(0, #631111, black);
+  background: linear-gradient(0, #7b7d0f, black);
 }
 
 .row {
