--- a/src/client/styles/colors.less
+++ b/src/client/styles/colors.less
@@ -1,9 +1,35 @@
+// Main colors
+
 @bgColorDark: #000000;
 @bgColorLight: #FCFFF4;
 @textColorDark: #FFF;
 @textColorLight: #000000;
 @purpleDark: #5A0FB9;
 @purpleLight: #E2CBFF;
-
-
 @logoColor: #FF4141;
+
+// Tetramino colors
+
+@purple: #7119a7;
+@darkPurple: #5d0692;
+@purpleShadow: #481567;
+
+@green: #48B116;
+@darkGreen: #0B8E00;
+@greenShadow: #04500a;
+
+@orange: #FDA420;
+@darkOrange: #D88A16;
+@orangeShadow: #9c6124;
+
+@red: #C72907;
+@darkRed: #9B2424;
+@redShadow: #631111;
+
+@yellow: #E3DA07;
+@darkYellow: #C7C015;
+@yellowShadow: #7b7d0f;
+
+@blue: #1E45D0;
+@darkBlue: #082BA7;
+@blueShadow: #001e75;
