--- a/src/client/styles/colors.less
+++ b/src/client/styles/colors.less
@@ -33,3 +33,75 @@
 @blue: #1E45D0;
 @darkBlue: #082BA7;
 @blueShadow: #001e75;
+
+.purple {
+  @purple: #7119a7;
+}
+
+.darkPurple {
+  @darkPurple: #5d0692;
+}
+
+.purpleShadow {
+  @purpleShadow: #481567;
+}
+
+.green {
+  @green: #48B116;
+}
+
+.darkGreen {
+  @darkGreen: #0B8E00;
+}
+
+.greenShadow {
+  @greenShadow: #04500a;
+}
+
+.orange {
+  @orange: #FDA420;
+}
+
+.darkOrange {
+  @darkOrange: #D88A16;
+}
+
+.orangeShadow {
+  @orangeShadow: #9c6124;
+}
+
+.red {
+  @red: #C72907;
+}
+
+.darkRed {
+  @darkRed: #9B2424;
+}
+
+.redShadow {
+  @redShadow: #631111;
+}
+
+.yellow {
+  @yellow: #E3DA07;
+}
+
+.darkYellow {
+  @darkYellow: #C7C015;
+}
+
+.yellowShadow {
+  @yellowShadow: #7b7d0f;
+}
+
+.blue {
+  @blue: #1E45D0;
+}
+
+.darkBlue {
+  @darkBlue: #082BA7;
+}
+
+.blueShadow {
+  @blueShadow: #001e75;
+}
