--- a/src/client/components/MainScreen/BackgroundScreen/BlueZ/BlueZ.less
+++ b/src/client/components/MainScreen/BackgroundScreen/BlueZ/BlueZ.less
@@ -21,19 +21,19 @@
 .blueBox {
   width: 40px;
   height: 40px;
-  background-color: @blue;
+  background-color: #333333;
 }
 
 .darkBlueBox {
   width: 40px;
   height: 40px;
-  background-color: @darkBlue;
+  background-color: #333333;
 }
 
 .blueShadow {
   width: 80px;
   height: 60px;
-  background: linear-gradient(0, @blueShadow, black);
+  background: linear-gradient(0, #333333, black);
 }
 
 .row {
