--- a/src/client/styles/colors.less
+++ b/src/client/styles/colors.less
@@ -25,24 +25,12 @@ each(@tetramino-colors {
   }
 
   .dark_@{key} {
-    background-color: darken(@value, 20%);
+    background-color: darken(@value, 7%);
+  }
+
+  .@{key}Shadow {
+    width: 40px;
+    height: 40px;
+    background: linear-gradient(0, fade(@value, 50%), rgba(0, 0, 0, 0));
   }
 });
-
-//@darkPurple: #5d0692;
-//@purpleShadow: #481567;
-//
-//@darkGreen: #0B8E00;
-//@greenShadow: #04500a;
-//
-//@darkOrange: #D88A16;
-//@orangeShadow: #9c6124;
-//
-//@darkRed: #9B2424;
-//@redShadow: #631111;
-//
-//@darkYellow: #C7C015;
-//@yellowShadow: #7b7d0f;
-//
-//@darkBlue: #082BA7;
-//@blueShadow: #001e75;
