--- a/src/client/components/MainScreen/Logo/Logo.module.less
+++ b/src/client/components/MainScreen/Logo/Logo.module.less
@@ -2,8 +2,7 @@
 @import "../../../styles/fonts.less";
 
 .logo {
-  margin: auto;
-  font-family: @tetrisFont;
+  margin: 120px auto 50px;
   font-size: @logoFontSize;
   color: @logoColor;
 }
