--- a/src/client/components/common/MenuButton/MenuButton.less
+++ b/src/client/components/common/MenuButton/MenuButton.less
@@ -1,12 +1,15 @@
 @import "client/styles/colors";
+@import "client/styles/fonts";
 
 .button {
-  width: 300px;
-  height: 50px;
+  word-spacing: 10px;
+  width: 480px;
+  height: 100px;
   max-width: 100%;
   display: flex;
   cursor: pointer;
-  margin-bottom: 50px;
+  font-size: @menuFontSize;
+  margin: 50px 0;
 
   &.dark {
     background-color: @purpleDark;
