added color box, added lang switcher (not working)

--- a/src/client/components/MainScreen/MainScreen.module.less
+++ b/src/client/components/MainScreen/MainScreen.module.less
@@ -1,4 +1,16 @@
 .mainMenu {
   display: flex;
   flex-direction: column;
+
+  .logoRow {
+    position: relative;
+    display: flex;
+    margin: 120px auto 50px;
+
+    .switcherBox {
+      z-index: 1;
+      position: absolute;
+      left: 750px;
+    }
+  }
 }
