--- a/src/client/styles/colors.less
+++ b/src/client/styles/colors.less
@@ -8,6 +8,13 @@
 @purpleLight: #E2CBFF;
 @logoColor: #FF4141;
 
+// Color switcher colors
+
+@sunColor: #827D0B;
+@moonColor: #000000;
+@backgroundSunColor: #2D2924;
+@backgroundMoonColor: #E3DA07;
+
 // Tetramino colors
 
 @tetramino-colors: {
