config i18n, styled lang switcher

--- a/src/client/components/MainScreen/MainScreen.module.less
+++ b/src/client/components/MainScreen/MainScreen.module.less
@@ -7,10 +7,16 @@
     display: flex;
     margin: 120px auto 50px;
 
-    .switcherBox {
+    .colorSwitcherBox {
       z-index: 1;
       position: absolute;
       left: 750px;
+    }
+
+    .langSwitcherBox {
+      z-index: 1;
+      position: absolute;
+      left: 900px;
     }
   }
 }
