--- a/src/client/components/MainScreen/LangSwitcher/LangSwitcher.module.less
+++ b/src/client/components/MainScreen/LangSwitcher/LangSwitcher.module.less
@@ -1,3 +1,15 @@
+@import '../../../styles/colors';
+@import '../../../styles/fonts';
+
 .switcherBox {
+  display: flex;
   cursor: pointer;
+  width: 80px;
+  height: 80px;
+  font-size: @menuFontSize;
+  background-color: @backgroundSunColor;
+
+  .text {
+    margin: auto;
+  }
 }
