--- a/src/client/components/MainScreen/LangSwitcher/LangSwitcher.module.less
+++ b/src/client/components/MainScreen/LangSwitcher/LangSwitcher.module.less
@@ -7,7 +7,8 @@
   width: 80px;
   height: 80px;
   font-size: @menuFontSize;
-  background-color: @backgroundSunColor;
+  background-color: @purpleDark;
+  color: white;
 
   .text {
     margin: auto;
