added some responsive styles for medium width devices

--- a/src/client/components/MainScreen/MainScreen.module.less
+++ b/src/client/components/MainScreen/MainScreen.module.less
@@ -18,5 +18,15 @@
       position: absolute;
       left: 900px;
     }
+
+    @media screen and (max-width: 1700px) {
+      .colorSwitcherBox {
+        left: 600px;
+      }
+
+      .langSwitcherBox {
+        left: 750px;
+      }
+    }
   }
 }
