--- a/src/client/components/MainScreen/Menu/Leaderboard/Leaderboard.module.less
+++ b/src/client/components/MainScreen/Menu/Leaderboard/Leaderboard.module.less
@@ -9,7 +9,7 @@
   background-color: rgba(255, 255, 255, 0.1);
 
   .modalWindow {
-    z-index: 20;
+    z-index: 5;
     margin: 250px auto auto;
     width: 850px;
     height: 650px;
@@ -19,6 +19,7 @@
       display: flex;
       justify-content: flex-end;
     }
+
     .leaderRow {
       font-size: 24px;
       display: flex;
@@ -39,4 +40,18 @@
       }
     }
   }
+
+    @media screen and (max-width: 1600px) {
+      .modalWindow {
+        width: 750px;
+        height: 550px;
+        margin-top: 220px;
+
+        .leaderRow {
+          height: 60px;
+          line-height: 55px;
+          margin: 30px auto;
+        }
+      }
+    }
 }
