added check for 'enter' on keydown

--- a/src/client/components/MainScreen/BackgroundScreen/BackgroundScreen.less
+++ b/src/client/components/MainScreen/BackgroundScreen/BackgroundScreen.less
@@ -1,6 +1,7 @@
 @import "../../../styles/colors.less";
 
 .boxContainer {
+  outline: none;
   cursor: pointer;
   position: absolute;
   top: -200px;
