--- a/src/client/components/common/MenuButton/MenuButton.less
+++ b/src/client/components/common/MenuButton/MenuButton.less
@@ -10,7 +10,6 @@
   cursor: pointer;
   font-size: @menuFontSize;
   margin: 50px 0;
-  outline: none;
 
   &.dark {
     background-color: @purpleDark;
@@ -21,6 +20,10 @@
     background-color: @purpleLight;
     color: @textColorLight;
   }
+}
+
+.button:focus {
+  outline: 1px solid @logoColor;
 }
 
 .text {
