--- a/src/client/components/MainScreen/ColorSwitcher/ColorSwitcher.module.less
+++ b/src/client/components/MainScreen/ColorSwitcher/ColorSwitcher.module.less
@@ -1,21 +1,36 @@
 @import '../../../styles/colors';
 
 .colorBox {
+  outline: none;
   display: flex;
   cursor: pointer;
   width: 80px;
   height: 80px;
-  background-color: @backgroundSunColor;
+  transition: 1s;
 
   .icon {
     margin: auto;
     width: 50px;
     height: 50px;
     font-size: 50px;
-    color: @sunColor;
   }
 }
 
-.colorBox:focus {
-  outline: 1px solid @logoColor;
+.dark {
+  color: @sunColor;
+  background-color: @backgroundSunColor;
 }
+
+.light {
+  color: @moonColor;
+  background-color: @backgroundMoonColor;
+}
+
+.dark:focus {
+  background-color: lighten(@backgroundSunColor, 10%);
+}
+
+.light:focus {
+  background-color: darken(@backgroundMoonColor, 15%);
+}
+
