added color themes to some components

--- a/src/client/components/MainScreen/ColorSwitcher/ColorSwitcher.module.less
+++ b/src/client/components/MainScreen/ColorSwitcher/ColorSwitcher.module.less
@@ -26,11 +26,7 @@
   background-color: @backgroundMoonColor;
 }
 
-.dark:focus {
-  background-color: lighten(@backgroundSunColor, 10%);
-}
-
-.light:focus {
-  background-color: darken(@backgroundMoonColor, 15%);
+.colorBox:focus {
+  outline: 1px solid @logoColor;
 }
 
