--- a/src/client/components/common/MenuButton/MenuButton.less
+++ b/src/client/components/common/MenuButton/MenuButton.less
@@ -10,6 +10,7 @@
   cursor: pointer;
   font-size: @menuFontSize;
   margin: 50px 0;
+  transition: 1s;
 
   &.dark {
     background-color: @purpleDark;
