fixed shadow error in ColorSwitcher, added light theme to leaderboard

--- a/src/client/components/common/CloseButton/CloseButton.module.less
+++ b/src/client/components/common/CloseButton/CloseButton.module.less
@@ -10,7 +10,7 @@
   background-color: @greyColor;
 
   .closeSymbol {
-    color: black;
+    color: @bgColorDark;
     margin-left: 4px;
     margin-bottom: 10px;
     font-size: 40px;
