--- a/src/client/styles/colors.less
+++ b/src/client/styles/colors.less
@@ -27,6 +27,10 @@
   blue: #1E45D0;
 }
 
+//Leaderboard colors
+@darkModal: rgba(255, 255, 255, 0.1);
+@lightModal: rgba(213, 229, 167, 0.3);
+
 each(@tetramino-colors {
   .@{key} {
     background-color: @value;
