--- a/src/client/components/App.less
+++ b/src/client/components/App.less
@@ -1,6 +1,7 @@
 @import '../styles/fonts.less';
+@import '../styles/colors.less';
 
 body {
   font-family: @tetrisFont;
-  background-color: black;
+  background-color: @bgColorDark;
 }
