--- a/src/client/components/MainScreen/Menu/Leaderboard/Leaderboard.module.less
+++ b/src/client/components/MainScreen/Menu/Leaderboard/Leaderboard.module.less
@@ -6,14 +6,28 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.1);
+
+  &.dark {
+    background-color: @darkModal;
+  }
+
+  &.light {
+    background-color: @lightModal;
+  }
 
   .modalWindow {
     z-index: 5;
     margin: 250px auto auto;
     width: 850px;
     height: 650px;
-    background: black;
+
+    &.dark {
+      background-color: @bgColorDark;
+    }
+
+    &.light {
+      background-color: @bgColorLight;
+    }
 
     .closeButtonBox {
       display: flex;
@@ -28,8 +42,16 @@
       line-height: 55px;
       justify-content: space-between;
       width: 80%;
-      background-color: @purpleDark;
-      color: white;
+
+      &.dark {
+        background-color: @purpleDark;
+        color: @textColorDark;
+      }
+
+      &.light {
+        background-color: @purpleLight;
+        color: @textColorLight;
+      }
 
       .name {
         margin-left: 25px;
