edit project settings, add routing, game page

--- a/src/client/components/App.less
+++ b/src/client/components/App.less
@@ -1,5 +1,6 @@
-@import '../styles/fonts.less';
-@import '../styles/colors.less';
+@import 'styles/fonts.less';
+@import 'styles/colors.less';
+@import "styles/reset";
 
 body {
   font-family: @tetrisFont;
