--- a/src/client/components/pages/MainScreenPage/Menu/JoinRoom/JoinRoom.module.less
+++ b/src/client/components/pages/MainScreenPage/Menu/JoinRoom/JoinRoom.module.less
@@ -1,5 +1,5 @@
-@import '../../../../styles/fonts';
-@import '../../../../styles/colors';
+@import 'styles/fonts';
+@import 'styles/colors';
 
 .joinBox {
   position: relative;
