--- a/src/client/components/pages/MainScreenPage/UsernameModal/UsernameModal.module.less
+++ b/src/client/components/pages/MainScreenPage/UsernameModal/UsernameModal.module.less
@@ -9,54 +9,49 @@
   background-color: @lightModal;
 }
 
-.modalWindow {
-  transition: all 1s ease 0s;
-  margin: 0 auto auto;
-  width: 500px;
-  height: 250px;
+.inputBox {
+  z-index: 10;
+  width: 480px;
+  height: 100px;
+  max-width: 100%;
+  margin: auto;
+  display: flex;
 
-  .inputBox {
-    width: 480px;
-    height: 100px;
-    max-width: 100%;
+  .input {
+    word-spacing: 10px;
     margin: auto;
-    display: flex;
-
-    .input {
-      word-spacing: 10px;
-      margin: auto;
-      width: 440px;
-      height: 100px;
-      border: none;
-      outline: none;
-      font-family: @tetrisFont;
-      font-size: 20px;
-    }
-
-    .input::placeholder {
-      color: inherit;
-      text-align: center;
-      font-family: @tetrisFont;
-      word-spacing: 10px;
-      font-size: 20px;
-    }
-  }
-
-  .enterButton {
-    outline: none;
-    border: none;
-    cursor: pointer;
-    display: flex;
+    width: 440px;
     height: 100px;
-    width: 100px;
-    transition: 1s;
-    margin: 50px auto auto;
-
-    .enterIcon {
-      margin: auto;
-      font-size: 60px;
-    }
+    border: none;
+    outline: none;
+    font-family: @tetrisFont;
+    font-size: 20px;
   }
+
+  .input::placeholder {
+    color: inherit;
+    text-align: center;
+    font-family: @tetrisFont;
+    word-spacing: 10px;
+    font-size: 20px;
+  }
+}
+
+.enterButton {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  height: 100px;
+  width: 100px;
+  transition: 1s;
+  margin: 50px auto auto;
+
+  .enterIcon {
+    margin: auto;
+    font-size: 60px;
+  }
+}
 
   .enterButton:disabled {
     cursor: auto;
@@ -70,7 +65,6 @@
   &.light {
     background-color: @bgColorLight;
   }
-}
 
 &.dark {
   background-color: @purpleDark;
