added lang switcher and color switcher to game page, some styles fixed

--- a/src/client/components/pages/GamePage/Board/Board.less
+++ b/src/client/components/pages/GamePage/Board/Board.less
@@ -2,6 +2,10 @@
 @cellCountVertical: 20;
 @cellSize: calc((100vh / @cellCountVertical - (@appPaddingSize * 2 / @cellCountVertical)));
 
+.container {
+  margin: auto;
+}
+
 .row {
   display: flex;
 }
