--- a/src/client/components/pages/MainScreenPage/Menu/JoinRoom/JoinRoom.module.less
+++ b/src/client/components/pages/MainScreenPage/Menu/JoinRoom/JoinRoom.module.less
@@ -10,9 +10,18 @@
     height: 100px;
     max-width: 100%;
     display: flex;
+    flex-direction: column;
     font-size: @menuFontSize;
     margin: 50px 0;
     transition: 1s;
+
+    .inputTip {
+      color: white;
+      font-size: 10px;
+      top: 115px;
+      left: 80px;
+      position: absolute;
+    }
 
     .input {
       width: 440px;
