small style fixes

--- a/src/client/components/pages/GamePage/GamePage.less
+++ b/src/client/components/pages/GamePage/GamePage.less
@@ -7,11 +7,11 @@
   padding: @appPaddingSize;
 
   &.dark {
-    color: @textColorDark;
+    color: @purpleLight;
   }
 
   &.light {
-    color: @textColorLight;
+    color: @purpleDark;
   }
 }
 
@@ -34,10 +34,11 @@
 }
 
 .optionSection {
+  margin-left: 25px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 10%;
+  width: 9%;
   min-width: 165px;
 }
 
