--- a/src/client/styles/colors.less
+++ b/src/client/styles/colors.less
@@ -5,7 +5,7 @@
 @textColorDark: #FFF;
 @textColorLight: #000000;
 @purpleDark: #5A0FB9;
-@purpleLight: #E2CBFF;
+@purpleLight: #EEE1FF;
 @logoColor: #FF4141;
 @greyColor: #C4C4C4;
 
