added changing of map reducers and actions, small css changes

--- a/src/client/components/pages/MainScreenPage/ColorSwitcher/ColorSwitcher.module.less
+++ b/src/client/components/pages/MainScreenPage/ColorSwitcher/ColorSwitcher.module.less
@@ -31,3 +31,16 @@
   outline: 1px solid @logoColor;
 }
 
+@media screen and (max-width: 1600px) {
+  .colorBox {
+    width: 60px;
+    height: 60px;
+    font-size: 26px;
+
+    .icon {
+      font-size: 40px;
+      width: 40px;
+      height: 40px;
+    }
+  }
+}
