--- a/src/client/components/pages/MainScreenPage/LangSwitcher/LangSwitcher.module.less
+++ b/src/client/components/pages/MainScreenPage/LangSwitcher/LangSwitcher.module.less
@@ -29,3 +29,10 @@
   outline: 1px solid @logoColor;
 }
 
+@media screen and (max-width: 1600px) {
+  .switcherBox {
+    width: 60px;
+    height: 60px;
+    font-size: 26px;
+  }
+}
