added start game button

--- a/src/client/components/common/LangSwitcher/LangSwitcher.module.less
+++ b/src/client/components/common/LangSwitcher/LangSwitcher.module.less
@@ -9,6 +9,7 @@
   height: 80px;
   font-size: @menuFontSize;
   transition: 1s;
+  margin-bottom: 20px;
 
   &.dark {
     background-color: @purpleDark;
