--- a/src/client/components/pages/GamePage/GamePage.less
+++ b/src/client/components/pages/GamePage/GamePage.less
@@ -38,16 +38,38 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 9%;
-  min-width: 165px;
+  min-width: 280px;
+
+  .startGameBox {
+    width: 80px;
+    height: 80px;
+    background-color: @purpleDark;
+    color: white;
+    cursor: pointer;
+
+    .startGameIcon {
+      margin: auto;
+      font-size: 80px;
+    }
+  }
 }
 
-@media screen and (max-width: 1700px) {
+@media screen and (max-width: 1600px) {
   .optionSection {
     flex-direction: column;
     justify-content: flex-start;
     width: 5%;
     min-width: 80px;
+
+    .startGameBox {
+      width: 60px;
+      height: 60px;
+      margin: 0;
+
+      .startGameIcon {
+        font-size: 60px;
+      }
+    }
   }
 }
 
