--- a/src/client/components/pages/GamePage/GameModal/GameModalContent/GameModalContent.module.less
+++ b/src/client/components/pages/GamePage/GameModal/GameModalContent/GameModalContent.module.less
@@ -4,7 +4,7 @@
 .content {
   display: flex;
   flex-direction: column;
-  padding: 100px;
+  padding: 75px;
 
   .contentTitle {
     margin: auto;
@@ -13,44 +13,72 @@
 
   .speedTitle {
     margin: 50px auto;
-    font-size: 40px;
+    font-size: 26px;
   }
 
   .contentBody {
     margin-top: 20px;
     justify-content: space-between;
     display: flex;
+    flex-direction: column;
 
-    .speed {
-      font-size: 24px;
-      margin: auto;
+    .speedOption {
+      display: flex;
+
+      .speed {
+        font-size: 24px;
+        margin: auto;
+      }
+
+      .arrowBox {
+        cursor: pointer;
+        height: 80px;
+        width: 80px;
+        display: flex;
+
+        &.dark {
+          background-color: #352d40;
+        }
+
+        &.light {
+          background-color: @purpleLight;
+          color: @textColorLight;
+        }
+
+        .arrowUp {
+          color: #148c14;
+        }
+
+        .arrowDown {
+          color: #9c0f0f;
+        }
+
+        .arrow {
+          font-size: 60px;
+          margin: auto;
+        }
+      }
     }
 
-    .arrowBox {
+    .startGame {
       cursor: pointer;
-      height: 80px;
-      width: 80px;
       display: flex;
+      margin: 50px auto;
+      width: 250px;
+      height: 80px;
 
       &.dark {
         background-color: #352d40;
+        color: @purpleLight;
       }
 
       &.light {
         background-color: @purpleLight;
-        color: @textColorLight;
+        color: @purpleDark;
       }
 
-      .arrowUp {
-        color: #148c14;
-      }
-
-      .arrowDown {
-        color: #9c0f0f;
-      }
-
-      .arrow {
-        font-size: 60px;
+      .buttonText {
+        font-size: 26px;
         margin: auto;
       }
     }
