--- a/src/client/components/pages/GamePage/GameModal/GameModalContent/GameModalContent.module.less
+++ b/src/client/components/pages/GamePage/GameModal/GameModalContent/GameModalContent.module.less
@@ -4,7 +4,7 @@
 .content {
   display: flex;
   flex-direction: column;
-  padding: 75px;
+  padding: 25px 75px 75px;
 
   .contentTitle {
     margin: auto;
