--- a/src/client/components/pages/GamePage/GamePage.less
+++ b/src/client/components/pages/GamePage/GamePage.less
@@ -1,6 +1,27 @@
 @import "styles/colors";
 @import "styles/vars";
 
+.errorContainer {
+  word-spacing: 10px;
+  margin-top: 150px;
+  padding: 100px;
+  display: flex;
+
+  .error {
+    line-height: 50px;
+    margin: auto;
+    font-size: 32px;
+  }
+
+  &.dark {
+    color: @purpleLight;
+  }
+
+  &.light {
+    color: @purpleDark;
+  }
+}
+
 .container {
   display: flex;
   height: 100%;
