--- a/src/client/components/pages/GamePage/GamePage.less
+++ b/src/client/components/pages/GamePage/GamePage.less
@@ -29,6 +29,7 @@
 }
 
 .container {
+  word-spacing: 10px;
   display: flex;
   height: 100%;
   padding: @appPaddingSize;
@@ -80,8 +81,4 @@
 .title {
   font-size: 18px;
   margin-bottom: 16px;
-}
-
-.text {
-  margin-bottom: 12px;
 }
