--- a/src/client/components/common/Modal/Modal.module.less
+++ b/src/client/components/common/Modal/Modal.module.less
@@ -1,11 +1,21 @@
 @import 'styles/colors';
 
-.modalBox {
+.absoluteContainer {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.layer {
+  .absoluteContainer();
+  background-color: @bgColorDark;
+  opacity: 0.5;
+}
+
+.modalBox {
+  .absoluteContainer();
 
   &.dark {
     background-color: @darkModal;
@@ -17,9 +27,14 @@
 
   .modalWindow {
     z-index: 5;
-    margin: 250px auto auto;
+    margin: auto;
+    //margin: 250px auto auto;
     width: 850px;
     height: 650px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     &.dark {
       background-color: @bgColorDark;
@@ -39,7 +54,6 @@
     .modalWindow {
       width: 750px;
       height: 550px;
-      margin-top: 220px;
     }
   }
 }
