--- a/src/client/components/pages/GamePage/GamePage.less
+++ b/src/client/components/pages/GamePage/GamePage.less
@@ -59,6 +59,7 @@
   display: flex;
   flex-direction: column;
   width: 30%;
+  height: 100%;
 }
 
 .optionSection {
@@ -81,4 +82,22 @@
 .title {
   font-size: 18px;
   margin-bottom: 16px;
+}
+
+.playerContainer {
+  display: flex;
+  flex-wrap: wrap;
+
+  .player {
+    margin-bottom: 12px;
+    margin-right: 12px;
+  }
+
+  .name {
+    width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 8px;
+  }
 }
