added modal for game end

--- a/src/client/components/pages/MainScreenPage/UsernameModal/UsernameModal.module.less
+++ b/src/client/components/pages/MainScreenPage/UsernameModal/UsernameModal.module.less
@@ -10,6 +10,7 @@
 }
 
 .inputBox {
+  transition: 1s;
   position: relative;
   z-index: 10;
   width: 480px;
@@ -20,6 +21,7 @@
   flex-direction: column;
 
   .input {
+    transition: 1s;
     word-spacing: 10px;
     margin: auto;
     width: 440px;
